<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SportsScores</string>
    <string name="action_settings">Settings</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_game">Enter Game</string>
    <string name="next_game">Next Game</string>
    <string name="date">Date</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="zero">0</string>
    <string name="team1c">Team 1:</string>
    <string name="team2c">Team 2:</string>
    <string name="score">Score:</string>
    <string name="done">Done</string>
    <string name="nothing">Nothing</string>

    <string-array name="team_array">
        <item>Atlanta Hawks</item>
        <item>Boston Celtics</item>
        <item>Brooklyn Nets</item>
        <item>Charlotte Bobcats</item>
        <item>Chicago Bulls</item>
        <item>Cleveland Cavaliers</item>
        <item>Dallas Mavericks</item>
        <item>Denver Nuggets</item>
        <item>Detroit Pistons</item>
        <item>Golden State Warriors</item>
        <item>Houston Rockets</item>
        <item>Indiana Pacers</item>
        <item>Los Angeles Clippers</item>
        <item>Los Angeles Lakers</item>
        <item>Memphis Grizzlies</item>
        <item>Miami Heat</item>
        <item>Milwaukee Bucks</item>
        <item>Minnesota Timberwolves</item>
        <item>New Orleans Pelicans</item>
        <item>New York Knicks</item>
        <item>Oklahoma City Thunder</item>
        <item>Orlando Magic</item>
        <item>Philadelphia 76ers</item>
        <item>Phoenix Suns</item>
        <item>Portland Trail Blazers</item>
        <item>Sacramento Kings</item>
        <item>San Antonio Spurs</item>
        <item>Toronto Raptors</item>
        <item>Utah Jazz</item>
        <item>Washington Wizards</item>
    </string-array>

</resources>
